<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_ingredientes"
        android:icon="@drawable/ic_format_list_numbers_black_48dp"
        android:title="@string/byb_ingredientes" />

    <item
        android:id="@+id/navigation_utiles"
        android:icon="@drawable/ic_toolbox_black_48dp"
        android:title="@string/byb_utiles" />

    <item
        android:id="@+id/navigation_explicacion"
        android:icon="@drawable/ic_pot_mix_black_48dp"
        android:title="@string/byb_explicacion" />

    <!--<item-->
        <!--android:id="@+id/navigation_profile"-->
        <!--android:icon="@drawable/ic_person_white_24dp"-->
        <!--android:title="@string/title_profile" />-->

</menu>